@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-05-23 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Fix for websocket_protocol in cloudi_service_http_cowboy
+
 2014-05-22 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add the websocket_protocol configuration option to
